# aptoid-data-api

./: .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml
app/: exceptions.py  main.py
app/client/: aptoid.html
app/config/: models.py  sites.json
app/controllers/: aptoid.py  health.py  protocol.py
app/domain/: aptoid.py  scraper.py
app/middleware/: validators.py
app/services/: alert_endpoints.py
app/utils/: exceptions.py  general.py  logger.py  requests.py  types.py  versioned_route.py
tests/: conftest.py
tests/api/: test_aptoid.py
tests/pages/: aptoid_dragon_city.html
tests/unit/: test_content_scraper.py
