[tool.poetry]
name = "aptoid-web-crawler"
version = "0.1.0"
description = ""
authors = ["Michael"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
falcon = "^3.1.3"
uvicorn = "^0.30.1"
lxml = "^5.2.2"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.7"
debugpy = "^1.8.1"
mypy = "^1.10.0"

[tool.ruff.lint]
unfixable = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
