[tool.poetry]
name = "aptoid-web-crawler"
version = "0.1.0"
description = ""
authors = ["Michael"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
falcon = "^3.1.3"
uvicorn = "^0.30.1"
lxml = "^5.2.2"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
aiohttp = "^3.9.5"
validators = "^0.28.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.7"
debugpy = "^1.8.1"
mypy = "^1.10.0"
pytest-asyncio = "^0.23.7"
docker = "^7.1.0"

[tool.ruff.lint]
unfixable = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers= """
    unit: Unit tests
    integration: Integration tests
    api: API tests
"""

[[tool.mypy.overrides]]
module = "falcon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
